@@ -1,0 +1,6 @@
+build/
+docs/generated/
+docs/assets/
+.DS_Store
+*.swp
+vendor/bundle/
