@@ -9,6 +9,8 @@ all: requirements changelog html pdf
 
 requirements:
 	ruby $(SCRIPTS_DIR)/process_requirements.rb
+	mkdir -p $(DOC_DIR)/assets
+	cp -R $(DATA_DIR)/assets/* $(DOC_DIR)/assets/
 
 changelog:
 	ruby $(SCRIPTS_DIR)/generate_changelog.rb
@@ -17,7 +19,7 @@ html:
 	bundle exec asciidoctor -D $(BUILD_DIR) $(INDEX)
 
 pdf:
-	bundle exec asciidoctor-pdf -D $(BUILD_DIR) -a pdf-theme=default $(INDEX)
+	bundle exec asciidoctor-pdf -D $(BUILD_DIR) -a pdf-theme=default -r ./scripts/polyfill.rb $(INDEX)
 
 clean:
 	rm -rf $(BUILD_DIR)
